src/test/test-models/bad/err-no-cond.stan
transformed data {
  real x;
  if ()
    x <- 2;
}
model {
}
